<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_root_step2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/circle_background2"
        tools:layout_editor_absoluteX="-99dp"
        tools:layout_editor_absoluteY="-71dp" />


    <ImageView
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_centerInParent="true"
        android:src="@drawable/circle_background"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-79dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="145dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/name_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Apellidos -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>



    <!-- Celular -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input_layout"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón Avanza -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/acceder_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:backgroundTint="@color/principal"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <!-- Mensaje debajo del botón -->
    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message_text"
        app:layout_constraintTop_toBottomOf="@+id/acceder_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- "Ingresa" con color celeste -->
    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_link_text"
        android:textColor="@color/ingresa"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/login_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
